Added Mac Menu Tray